test/data/semantic-errors/semantic-errors.bool
let x:int = 3
let x:int = 4
x + 3
1 + 2
x * x
x ** x
1.3 + 2.2
x // 3.4
1 % 3
3.4 % 2
1 - 2
x - x

if x == 3:
indent 1
dedent

if x:
indent 1
dedent
